--- a/admin/css/mwb-order-edit-page.css
+++ b/admin/css/mwb-order-edit-page.css
@@ -7,13 +7,13 @@
 }
 
 /*Edit order page*/
-#mwb_rma_order_refund #mwb_rma_return_meta_wrapper td{
+#mwb_rma_order_refund #mwb_rma_return_meta_wrapper td {
     width: 20%;
     text-align: center;
     border-bottom: 1px solid #eeeeee;
     padding: 10px 0;
 }
-#mwb_rma_return_meta_wrapper > table > thead > tr > th{
+#mwb_rma_return_meta_wrapper > table > thead > tr > th {
     padding-bottom: 10px;
     border-bottom: 1px solid #eeeeee;
 }
@@ -21,22 +21,22 @@
 	width: 80px;
     height: auto;
 }  
-#mwb_rma_return_meta_wrapper > table{
+#mwb_rma_return_meta_wrapper > table {
 	width: 100%;
 }
-.mwb_rma_refund_pd-top{
-	padding-top: 10px;: 
+.mwb_rma_refund_pd-top {
+	padding-top: 10px; 
 }
 
 
 /*mwb_rma_order_msg_history*/
-#mwb_rma_order_msg_history .mwb_wrma_reload_messages{
+#mwb_rma_order_msg_history .mwb_wrma_reload_messages {
 	display: inline-block;
     width: 16px;
     margin-left: 10px;
     vertical-align: middle;
 }
-#mwb_rma_order_msg_history .mwb_wrma_reload_messages img{
+#mwb_rma_order_msg_history .mwb_wrma_reload_messages img {
 	width: 100%;
 }
 .mwb_admin_order_msg_history_container{
@@ -46,7 +46,7 @@
     max-height: 400px;
     min-height: 110px;
 }
-.mwb_order_msg_main_container{
+.mwb-order-msg__row {
     margin-bottom: 30px;
     border: 1px solid #dddddd;
     padding-top: 27px;
@@ -56,7 +56,7 @@
     width: auto;
     word-wrap: break-word;
 }
-.mwb_order_messages .mwb_order_msg_sender{
+.mwb_order_messages .mwb_order_msg_sender {
     background-color: #4f62b9;
     color: #ffffff;
     display: inline-block; 
@@ -65,7 +65,7 @@
     padding: 8px 52px 8px 30px;
     position: relative;
 }
-.mwb_order_messages .mwb_order_msg_sender:before{
+.mwb_order_messages .mwb_order_msg_sender:before {
     position: absolute;
     content: "";
     top: -11px;
@@ -77,28 +77,32 @@
     border-right: 22px solid transparent;
     transform: rotate(90deg);
 }
-.mwb_order_messages_info{
+.mwb_order_messages_info {
     justify-content: space-between;
     align-items: center;
 }  
 span.mwb_order_msg_date {
     font-size: 16px;
+    display: block;
+    margin-top: 10px;
+    padding-left: 30px;
+    color: #1f1f1f;
 }
-.mwb_order_msg_detail_container span{
+.mwb_order_msg_detail_container span {
     padding: 20px 0 20px 30px;
     display: inline-block;
 }
-.mwb_order_msg_attach_container{
+.mwb_order_msg_attach_container {
     padding-left: 30px;
 }
-.mwb_order_msg_attachments_title{
+.mwb_order_msg_attachments_title {
     padding-bottom: 8px;
 }
-.mwb_rma_admin_order_msg_wrapper textarea{
+.mwb_rma_admin_order_msg_wrapper textarea {
     width: 100%;
     min-height: 230px;
 }
-.mwb_order_msg_notice_wrapper{
+.mwb_order_msg_notice_wrapper {
     color: #fff;
     border-radius: 5px;
     display: none;
@@ -110,16 +114,52 @@ span.mwb_order_msg_date {
     margin-top: 30px;
     background: #64CD83;
 }
-.mwb_order_msg_notice_wrapper p{
+.mwb_order_msg_notice_wrapper p {
     margin: 0px;
     font-size: 16px;
 }
-.mwb_order_msg_notice_wrapper a{
+.mwb_order_msg_notice_wrapper a {
     color: #ffffff;
     text-decoration: none;
 }
+.mwb-order-msg__attachment-lable {
+    margin-top: 15px;
+}
+.mwb-order-msg-attachment-wrapper {
+    justify-content: space-between;
+}
+/*new-css*/
+.mwb_admin_order_msg_sub_container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.mwb-order-msg__row {
+    width: 100%;
+    max-width: calc(50% - 40px);
+}
+.mwb-order-msg__row:nth-child(2n-1) {
+    margin-right: 10px;
+}
+.mwb-order-msg__row:nth-child(2n) {
+    margin-left: 10px;
+}
+.wmb-order-admin__msg-container .mwb_order_msg_sender {
+    background-color: #71b02f;
+}
+.mwb_rma_order_msg_wrapper textarea {
+    width: 100%;
+}
 
 /*media-query*/
+@media only screen and (max-width: 575px) {
+    .mwb-order-msg__row {
+        max-width: 100%;
+    }
+    .mwb-order-msg__row:nth-child(2n-1), 
+    .mwb-order-msg__row:nth-child(2n) {
+        margin-right: 0;
+    }
+}
 @media only screen and (max-width: 480px){
     .mwb_order_messages_info{       
         flex-direction: column;
@@ -153,12 +193,15 @@ span.mwb_order_msg_date {
     .woocommerce-feature-enabled-activity-panels #woocommerce-order-downloads .buttons .select2-container{
        width: 100% !important; 
     }
+    .wp-admin .mwb-order-msg-btn {
+        margin-top: 20px;
+    }
 }
 
 div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail {
     border: 1px solid black;
     border-radius: 3px;
-    max-width: 115px;
+    max-width: 60px;
     display: table;
     margin-left: auto;
     margin-right: auto;
