--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -27,6 +27,7 @@ input[type=search], .input-text{
 	background-color: transparent !important;
 	border: 1px solid #ccc !important;
 	box-shadow: none !important;
+    padding: 10px 14px;
 }
 input[type=text]:focus, 
 input[type=number]:focus, 
@@ -52,6 +53,9 @@ h4{
 	display: flex;
 	flex-wrap: wrap;
 }
+select {
+    padding: 10px 14px;
+}
 .mwb_rma_refund_form_wrapper input[type=text]:focus, 
 .mwb_rma_refund_form_wrapper input[type=number]:focus, 
 .mwb_rma_refund_form_wrapper input[type=email]:focus, 
@@ -63,20 +67,25 @@ h4{
 .mwb_rma_refund_form_wrapper .input-text:focus {
     background-color: transparent;
 }
-.mwb_rma_refund_form_wrapper select#mwb_rma_return_request_subject {
+.mwb_rma_refund_form_wrapper .mwb-rma-subject__dropdown select {
     padding: 5px 105px 5px 5px;
     border-radius: 0;
+    width: 100%;
 }
-.mwb_rma_refund_form_wrapper > div,
-.mwb_rma_refund_form_wrapper .mwb_rma__column > div {
-    margin-bottom: 20px;
+.mwb_rma_refund_form_wrapper .mwb_rma_other_subject input {
+    width: 100%;
 }
-.mwb_rma_refund_form_wrapper img{
+.mwb_rma_refund_form_wrapper .product-name img{
 	width: 100%;
 	max-width: 80px;
     min-width: 60px;
 }
-.mwb_rma_refund_form_wrapper h2.woocommerce-column__title {
+.mwb-rma-product__table { 
+    border-collapse: collapse;
+    width: 100%;
+    min-width: 665px;
+}
+.mwb-rma-form__wrapper h2.woocommerce-column__title {
     font-weight: 600;
 }
 .mwb_rma_refund_form_wrapper select#mwb_rma_return_request_subject:focus-visible{
@@ -85,19 +94,94 @@ h4{
 .mwb_rma_refund_form_wrapper select#mwb_rma_return_request_subject option{
 	box-shadow: none;
 }
-.mwb_rma_product_table_wrapper{
+.mwb-rma-product__table-wrapper{
     overflow-x: auto;
+    padding: 0 15px;
 }
 .mwb_rma_refund_form_wrapper .mwb_rma_product_title{
-    margin-top: 8px;
+    padding: 0 15px;
 }
 .mwb_rma_refund_form_wrapper .mwb_rma_refund_request__row {
     justify-content: space-between;
 }
-.mwb_rma_refund_form_wrapper .mwb_rma__column{
+.mwb_rma_refund_form_wrapper .mwb_rma__column {
     width: 100%;
 }
-
+.mwb-rma-form__wrapper.mwb-rma-form__wrapper {
+    border: 1px solid #333333;
+}
+.mwb-rma-form__wrapper .mwb-rma-form__header {
+    background-color: #333333;
+}
+.mwb-rma-form__wrapper h1 {
+    font-size: 24px;
+    color: #ffffff;
+    font-weight: 500;
+    text-align: left;
+    padding: 10px 15px;
+    margin-top: 0;
+}
+.mwb-rma-form__wrapper td,
+.mwb-rma-form__wrapper th {
+    border: 1px solid #cccccc;
+    text-align: center;
+    vertical-align: middle;
+    padding: 15px;
+}
+.mwb-rma-form__wrapper th {
+    color: #333333;
+}
+.mwb-rma-form__wrapper .mwb-rma-product__wrap {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.mwb-rma-form__wrapper .mwb-rma__product-title {
+    margin-left: 20px;
+    text-align: left;
+}
+.mwb-rma-product__table tbody td {
+    background-color: #ffffff;
+}
+table.mwb-rma-product__table:not( .has-background ) tbody td {
+    background-color: #ffffff;
+}
+table.mwb-rma-product__table:not( .has-background ) tbody tr:nth-child(2n) td, fieldset, fieldset legend {
+    background-color: #ffffff;
+}
+.mwb-rma-form__wrapper .mwb-rma-row__pd {
+    padding: 0 15px;
+}
+.mwb-rma-form__wrapper .mwb-rma-col {
+    width: 100%;
+}
+.mwb-rma-form__wrapper .mwb-rma-col.mwb_rma_flex {
+    justify-content: flex-end;
+}
+.mwb-rma-form__wrapper .mwb_rma_other_subject {
+    margin: 25px 0;
+}
+.mwb_rma_attach_files {
+    margin-top: 10px;
+}
+.mwb-rma-subject__dropdown {
+    margin-top: 25px;
+}
+.mwb-rma-form__wrapper textarea {
+    width: 100%;
+}
+.mwb-rma-form__wrapper .product-quantity input {
+    height: 48px;
+    margin: 0 auto;
+    width: 197px;
+}
+.mwb-rma-form__wrapper th:last-child,
+.mwb-rma-form__wrapper td:last-child {
+    padding-right: 15px; 
+}
+.mwb-rma-form__wrapper td.product-total {
+    text-align: center;
+}
 /* View Order Messages */
 .mwb-order-msg-attachment-wrapper {
     margin-top: 20px;
@@ -131,7 +215,7 @@ form#mwb_order_new_msg_form{
     margin-left: 20px;
     width: 18px;
 }
-.mwb_order_msg_main_container{
+.mwb-order-msg__row{
     padding: 30px 30px 30px 0;
     margin-bottom: 30px;
     border: 1px solid #dddddd;
@@ -147,6 +231,7 @@ form#mwb_order_new_msg_form{
     padding: 8px 52px 8px 30px;
     position: relative;
     line-height: 1.8;
+    display: inline-block;
 }
 span.mwb_order_msg_sender:after {
     position: absolute;
@@ -160,6 +245,12 @@ span.mwb_order_msg_sender:after {
     border-right: 24px solid transparent;
     transform: rotate(90deg);
     width: 0;
+}
+.mwb_order_msg_date {
+    display: block;
+    margin-top: 10px;
+    padding-left: 30px;
+    color: #1f1f1f;
 }
 .mwb_order_msg_attach_container {
     padding-left: 30px;
@@ -181,10 +272,10 @@ img.mwb_order_msg_attachment_thumbnail {
 .mwb-order-attachment input:focus{
     outline: none;
 }
-.mwb_order_msg_main_container{
+.mwb-order-msg__row{
     border-color: #dddddd;
 } 
-.mwb_order_msg_main_container:last-child{
+.mwb-order-msg__row:last-child{
     margin-bottom: 0;
 }
 .mwb_order_msg_sender_details.mwb_rma_flex{
@@ -212,22 +303,61 @@ a.mwb_order_send_msg_dismiss{
     flex-wrap: wrap;
     align-items: center;
 }
+.mwb_order_msg_sub_container {
+    display: flex;
+    flex-wrap: wrap;
+}
+.mwb-order-msg__row {
+    width: 100%;
+    max-width: calc(50% - 10px);
+}
+.mwb-order-msg__row:nth-child(2n-1) {
+    margin-right: 10px;
+}
+.mwb-order-msg__row:nth-child(2n) {
+    margin-left: 10px;
+}
+.wmb-order-admin__msg-container .mwb_order_msg_sender {
+    background-color: #71b02f;
+}
+.mwb_rma_order_msg_wrapper textarea {
+    width: 100%;
+}
+
 /*media-query*/
-@media only screen and (min-width: 520px){
-    .mwb_rma_refund_form_wrapper .mwb_rma__column-left {
-        max-width: 60%;
+@media only screen and (max-width: 820px) {
+    .mwb-order-msg__row {
+        max-width: 100%;
+    }
+    .mwb-order-msg__row:nth-child(2n-1),
+    .mwb-order-msg__row:nth-child(2n) {
+        margin-right: 0;
+    }
+}
+@media only screen and (min-width: 600px) {
+    .mwb-rma-refund-request__row {
+        display: flex;
+        flex-wrap: nowrap;
+    }
+    .mwb-rma-form__wrapper .mwb-rma-col:nth-child(2) {
+        padding-left: 30px;
+        width: 60%;
     }
     .mwb_rma_refund_form_wrapper .mwb_rma__column-right {
         margin-left: 40px;
         max-width: calc(40% - 40px);
         justify-content: flex-end;
     }
+    .mwb-rma-form__wrapper .mwb-rma-col:nth-child(2) p {
+        max-width: 220px;
+        margin-left: auto;
+    }
 }
 @media only screen and (max-width: 480px){
     .mwb_order_msg_sub_container{
         padding: 15px;
     }
-    .mwb_order_msg_main_container{
+    .mwb-order-msg__row{
         padding: 15px 15px 15px 0;
     }
     .mwb_order_msg_attach_container{
@@ -239,32 +369,20 @@ a.mwb_order_send_msg_dismiss{
     .mwb_order_msg_attach_container{
         padding-left: 15px;
     }
-    .mwb_order_msg_sender {
-        padding: 8px 37px 8px 15px;
+    .mwb-rma-form__wrapper textarea{
+        height: 150px !important;
     }
 }
 @media only screen and (max-width: 375px){
-    .mwb-order-msg-attachment-wrapper.mwb_rma_flex, 
-    .mwb_order_msg_sender_details.mwb_rma_flex,
-    .mwb_order_msg_date{
+    .mwb-order-msg-attachment-wrapper.mwb_rma_flex {
         display: block;
-    }
-    span.mwb_order_msg_sender:after{
-        right: 8px;
-    }
-    .mwb-order-msg-btn{
-        margin-top: 30px;
-    }
-    .mwb_order_msg_date {
-        margin-top: 15px;
-        padding-left: 15px;
     }
 }
 
 div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail {
     border: 1px solid black;
     border-radius: 3px;
-    max-width: 115px;
+    max-width: 60px;
     display: table;
     margin-left: auto;
     margin-right: auto;
@@ -332,4 +450,11 @@ div.mwb_order_msg_single_attachment a .mwb_order_msg_attachment_thumbnail{
 }
 .return, .view_msg {
     margin-top: 4px;
+}
+.mwb_rma_refund_request__row {
+    padding: 0 15px;
+}
+.mwb_rma_customer_detail {
+    padding: 30px 15px;
+    overflow: hidden;
 }
