--- a/public/css/mwb-public.css
+++ b/public/css/mwb-public.css
@@ -156,11 +156,11 @@ select {
   background-color: #333333;
 }
 
-.mwb-rma-form__wrapper h1 {
+.mwb-rma-form__wrapper .mwb-rma-form__heading {
   font-size: 24px;
   color: #ffffff;
   font-weight: 500;
-  text-align: left;
+  text-align: center;
   padding: 10px 15px;
   margin-top: 0;
 }
@@ -390,6 +390,13 @@ a.mwb_order_send_msg_dismiss {
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center;
+}
+
+.mwb-loader-icon {
+  -webkit-animation: spin 1s infinite linear;
+          animation: spin 1s infinite linear;
+  transition: all 0.3s;
+  transition-timing-function: ease-in;
 }
 
 .mwb_order_msg_sub_container {
