--- a/assets/src/front-end/scss/main.scss
+++ b/assets/src/front-end/scss/main.scss
@@ -10,7 +10,8 @@
  */
 
  .wps_order_msg_history_container .wps_reload_messages .reload-icon {
-    width: 30px; 
+    margin-left: 10px;
+    width: 25px; 
 }
 
 .wps_order_msg_sub_container {
