--- a/public/css/woo-refund-and-exchange-lite-public.css
+++ b/public/css/woo-refund-and-exchange-lite-public.css
@@ -32,7 +32,8 @@
  * included in this file.
  */
 .wps_order_msg_history_container .wps_reload_messages .reload-icon {
-  width: 30px;
+  margin-left: 10px;
+  width: 25px;
 }
 
 .wps_order_msg_sub_container {
