--- a/assets/src/front-end/scss/main.scss
+++ b/assets/src/front-end/scss/main.scss
@@ -157,7 +157,7 @@ table.wps-rma-product__table:not( .has-background ) tbody tr:nth-child(2n) td, f
     width: 100%;
 }
 .wps-rma-form__wrapper .wps-rma-col.wps_rma_flex {
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 .wps-rma-form__wrapper .wps_rma_other_subject {
     margin: 25px 0;
