--- a/assets/src/back-end/scss/wps-order-edit-page-lite.scss
+++ b/assets/src/back-end/scss/wps-order-edit-page-lite.scss
@@ -225,3 +225,6 @@ div.wps_order_msg_single_attachment a .wps_order_msg_attachment_thumbnail{
     margin-left: 0 !important;
     margin-right: 0 !important;
 }
+#wps_rma_stock_button_wrapper {
+    margin-top: 5px;
+}
