--- a/common/css/woo-refund-and-exchange-lite-common.css
+++ b/common/css/woo-refund-and-exchange-lite-common.css
@@ -7,9 +7,6 @@
     min-width: unset;
 }
 
-.wps-rma-product__table thead th:nth-of-type(1) {
-    width: 80px;
-}
 
 table.wps-rma-product__table thead th:nth-of-type(2) {
     min-width: 315px;
@@ -155,7 +152,7 @@ table.wps-rma-product__table td.product-name img {
 @media screen and (max-width: 580px) {
 
     #wps_wrma_exchange_request_form_wrapper.wps-rma-form__wrapper.wps-rma-form__wrapper,
-    div.wps-rma-form__wrapper.wps-rma-form__wrapper,
+    div.wps-rma-form__wrapper.wps-rma-form__wrapper
         {
         border: none;
     }
