--- a/assets/src/back-end/scss/main.scss
+++ b/assets/src/back-end/scss/main.scss
@@ -1143,3 +1143,31 @@
     pointer-events:none;
   }
 
+  /* Pro link adding start */
+
+.wps-header-container .wps-header-title {
+    flex: 0 0 60%;
+    line-height: 1.25;
+}
+
+@media screen and (max-width: 768px) {
+
+    .wps-header-container .wps-header-title {
+        margin: 0 0 10px;
+        flex: 0 0 100%;
+    }
+
+    .wps-header-container a.wps-link {
+        margin: 5px 0 0;
+    }
+
+    .wps-header-container a.wps_go_pro_link {
+        margin: 5px 10px 0 0;
+    }
+
+    .wps-header-container a.wps-link+span {
+        margin: 0 5px;
+    }
+}
+
+/* Pro link adding end */
