--- a/admin/css/woo-refund-and-exchange-lite-admin.css
+++ b/admin/css/woo-refund-and-exchange-lite-admin.css
@@ -1305,6 +1305,11 @@ select {
   text-transform: uppercase;
 }
 
+button.wps_wrma_save_shiprocket.wps-wrma-save-button.wps-rma-admin__button.button_wps_rma_pro_div {
+  background-color: rgba(0, 0, 0, 0.12);
+  color: rgba(0, 0, 0, 0.38);
+}
+
 /* Additional Tabs added end */
 /* Applying Pro tags start */
 .wps-navbar__items .wps_rma_pro_class {
@@ -1381,6 +1386,7 @@ select {
   padding-bottom: 15px;
   padding-left: 25px;
   position: relative;
+  padding-right: 10px;
 }
 
 #wps_ship_setting.wps_rma_pro_div .wps__enable-shipping th:before,
